# Booker

./: .gitignore  README.md  requirements.txt  sampleArtists.json  seed_database.py  update_embeddings.py
.devcontainer/: devcontainer.json
agent-demo/: .env.example  ARCHITECTURE.md  GOVERNANCE_README.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_api.py  test_system.py
agent-demo/app/: main.py
agent-demo/app/components/: metrics_panel.py  trace_viewer.py
agent-demo/booker_mcp/: README.md  __init__.py  claude_desktop_config.json  server.py
agent-demo/config/: governance.dev.yaml  governance.yaml
agent-demo/data/: mock_data.py
agent-demo/src/agents/: artist_discovery.py  base.py  booking_advisor.py  coordinator.py  venue_matching.py
agent-demo/src/config/: prompts.py  settings.py
agent-demo/src/governance/: __init__.py  audit.py  coordinator.py  cost_control.py  models.py  nemo_wrapper.py  pii_protection.py
agent-demo/src/governance/rails_config/: config.yml
agent-demo/src/memory/: conversation.py  preferences.py  working.py
agent-demo/src/models/: message.py  trace.py
agent-demo/src/observability/: logger.py  metrics.py  tracer.py
agent-demo/src/orchestration/: executor.py
agent-demo/src/tools/: api_client.py  embeddings.py  mongo_client.py  registry.py  schemas.py  vector_search.py
backend/: Dockerfile  bandcamp.go  go.mod  go.sum  main.go
backend/cache/: cache.go
backend/docs/: docs.go  swagger.json  swagger.yaml
frontend-mobile/: App.tsx  package-lock.json  package.json
(+65 files in other folders)
